syntax = "proto3";

package envoy.config.metrics.v3alpha;

option java_outer_classname = "MetricsServiceProto";
option java_multiple_files = true;
option java_package = "io.envoyproxy.envoy.config.metrics.v3alpha";

import "envoy/api/v3alpha/core/grpc_service.proto";

import "validate/validate.proto";

// [#protodoc-title: Metrics service]

// Metrics Service is configured as a built-in *envoy.metrics_service* :ref:`StatsSink
// <envoy_api_msg_config.metrics.v3alpha.StatsSink>`. This opaque configuration will be used to
// create Metrics Service.
message MetricsServiceConfig {
  // The upstream gRPC cluster that hosts the metrics service.
  api.v3alpha.core.GrpcService grpc_service = 1 [(validate.rules).message = {required: true}];
}
